--- a/html檔/LookBook.html
+++ b/html檔/LookBook.html
@@ -4,21 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css
-    ">
+    <title>相冊頁面</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
     <style>
         /* ------------------- 排版元素 ------------------*/
 
         body {
-            /* background-color: #000000; */
             background-color: rgb(255, 250, 251);
-            /* background-color: #F5F5F5;  */
-        }
-
-        #box {
-            width: 100px;
-            height: 75px;
         }
 
         /* ---------header (輪播+封面+logo+nav)-------------------- */
@@ -26,57 +21,57 @@
         #s4 {
             display: flex;
             width: 100vw;
-            height: auto;
             justify-content: center;
-            /* 水平置中 */
             align-items: center;
             text-align: center;
-            /* 垂直置中 */
         }
 
         #s4photo img {
-            max-width: 80%;
+            max-width: 100%;
             height: auto;
-            /* 保持圖片比例 */
             margin: 0 auto;
-            /* 確保水平置中 */
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: auto;
-            position: relative;
         }
 
         nav ul {
-            width: 90vw;
-            background-color: rgba(90, 188, 222, 0.5);
-            background-size: auto;
             list-style: none;
             display: flex;
-            /* 使用 Flexbox */
+            /* 設定 flexbox 來並排顯示項目 */
             justify-content: center;
-            /* 水平置中 */
-            text-align: center;
-            /* 居中文本 */
-            gap: 90px;
-            /* 項目間距 */
-            margin: 10px;
+            /* 項目在水平方向上居中 */
+            padding: 0;
+            /* 移除內邊距 */
+            margin: 0;
+            /* 移除外邊距 */
+            background-color: rgba(90, 188, 222, 0.5);
+            width: 100vw;
+            height: auto;
         }
 
         nav li {
+            margin: 0 20px;
+            /* 設置每個菜單項目的左右間距 */
             font-family: "Alegreya", serif;
-            font-optical-sizing: auto;
-            font-weight: 483;
-            font-style: normal;
             font-size: 25px;
         }
 
         nav li a {
             text-decoration: none;
+            /* 移除連結下劃線 */
             color: aliceblue;
+            /* 設定文字顏色 */
+            display: block;
+            /* 使鏈接區域可以點擊 */
+            padding: 5px 10px;
+            /* 設置內邊距 */
+        }
+
+        .container-fluid {
+            position: relative;
+        }
+
+        .d-flex {
+            position: absolute;
+            right: 30px;
         }
 
         #logobox {
@@ -91,7 +86,8 @@
             max-width: 60%;
         }
 
-        /* ---------------------側邊欄--------------------- */
+        /* --------------------- 側邊欄 ---------------------- */
+
         #sidebox {
             display: grid;
             grid-template-columns: 250px 1fr;
@@ -135,80 +131,79 @@
             background-color: #575757;
         }
 
-        /*-------------------- 卡片式排列 ------------------*/
-
-        .photographer-list {
+        /*-------------------- 相冊 ------------------*/
+        #s8 {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            /* 動態調整列的數量 */
             gap: 20px;
-            padding: 20px;
-            justify-items: center;
-            /* 使卡片水平居中 */
-            align-items: center;
-            /* 使卡片垂直居中 */
-            text-align: center;
-            /* 保證文字也是居中 */
-            margin: 0 80px 25px 80px;
-        }
-
-        .photographer-card {
-            background-color: white;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-            width: 100%;
-            /* 保證卡片寬度是100% (對於自動生成的列會有幫助) */
-            max-width: 350px;
-            /* 設定最大寬度，防止卡片過寬 */
-        }
-
-        .photographer-card:hover {
-            transform: translateY(-10px);
-            /* 鼠標懸停效果 */
-        }
-
-        .photographer-image {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-
-        .photographer-info {
-            padding: 15px;
-        }
-
-        .photographer-name {
-            font-size: 1.2rem;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-
-        .photographer-specialty {
-            font-size: 1rem;
-            color: #666;
-            margin-bottom: 10px;
-        }
-
-        .photographer-rating span {
-            font-size: 1.1rem;
-            color: #FFD700;
-        }
-
-        .view-portfolio-btn {
-            background-color: #ccdacc;
-            color: rgb(65, 61, 61);
-            border: none;
+            /* 調整相簿之間的間距 */
             padding: 10px;
-            width: 100%;
-            cursor: pointer;
-            font-size: 1rem;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
+            margin: 20px;
+            flex: 1;
+            /* 占據剩餘空間 */
         }
 
-        .view-portfolio-btn:hover {
-            background-color: #324233;
+        .book-cover {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            /* 調整為父元素的寬度 */
+            height: auto;
+            background-color: #f5f5f5;
+            border: 1px solid #ddd;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
+            transition: transform 0.3s ease-in-out;
+            cursor: pointer;
+        }
+
+        .book-cover img {
+            width: 80%;
+            height: auto;
+            border-radius: 8px;
+        }
+
+        .book-cover:hover {
+            transform: scale(1.05);
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 2;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .modal-content {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            max-width: 80%;
+            max-height: 80%;
+            overflow-y: auto;
+            text-align: center;
+            position: relative;
+        }
+
+        .modal-gallery img {
+            width: 30%;
+            /* margin: 5px; */
+        }
+
+        .close {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 24px;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -223,7 +218,7 @@
         </div>
 
         <section id="s4">
-            <div id="s4photo" class="carousel slide carousel-fade" data-bs-interval="1500" data-bs-ride="carousel">
+            <div id="s4photo" class="carousel slide carousel-fade" data-bs-interval="2000" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="/img/sarura_mt.jpg" class="d-block w-100">
@@ -235,24 +230,35 @@
                         <img src="/img/seawoman.jpg" class="d-block w-100">
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#s4photo" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#s4photo" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
         </section>
 
-        <nav id="nav">
-            <ul id="navbox">
-                <li><a href="正.html">HOME</a></li>
-                <li><a href="Photographer.html">PHOTOGRAPHER</a></li>
-                <li><a href="LookBook.html">LOOK BOOK</a></li>
-                <li><a href="Article.html">ARTICLE</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <!-- <a class="navbar-brand" href="#"><img src="/img/Vesluneir.png"></a> -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Photographer</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled">Article</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
         </nav>
 
     </header>
@@ -294,75 +300,85 @@
             </div>
         </div>
 
-        <!---------------- 1. 文字介紹(S2)---------------------->
-        <main>
-            <section class="photographer-list">
-                <div class="photographer-card">
-                    <img src="/img/正面花.jpg" alt="攝影師1" class="photographer-image">
-                    <div class="photographer-info">
-                        <h3 class="photographer-name">攝影師1</h3>
-                        <p class="photographer-specialty">婚禮攝影</p>
-                        <div class="photographer-rating">
-                            <span>⭐⭐⭐⭐☆</span> <!-- 評價星級 -->
-                        </div>
-                        <button class="view-portfolio-btn">查看作品集</button>
-                    </div>
-                </div>
+    <main>
+        <!----------------------- 相簿 -------------------------->
+        <section id="s8">
+            <!-- 相簿 1 -->
+            <img class="book-cover" data-album="1" src="/img/book&camera2.jpg" alt="相冊1封面">
+            <!-- 相簿 2 -->
+            <img class="book-cover" data-album="2" src="/img/goldenhair.jpg" alt="相冊2封面">
+            <!-- 相簿 3 -->
+            <img class="book-cover" data-album="3" src="/img/photer3.jpg" alt="相冊3封面">
+        </section>
 
-                <div class="photographer-card">
-                    <img src="/img/人1左.JPG" alt="攝影師2" class="photographer-image">
-                    <div class="photographer-info">
-                        <h3 class="photographer-name">攝影師2</h3>
-                        <p class="photographer-specialty">時尚攝影</p>
-                        <div class="photographer-rating">
-                            <span>⭐⭐⭐⭐⭐</span> <!-- 評價星級 -->
-                        </div>
-                        <button class="view-portfolio-btn">查看作品集</button>
-                    </div>
+        <!-- 彈出框 -->
+        <div id="modal" class="modal">
+            <div class="modal-content">
+                <span class="close" id="closebar">&times;</span>
+                <div id="modalGallery" class="modal-gallery">
+                    <!-- 彈出框裡的相片會動態生成 -->
                 </div>
+            </div>
+        </div>
+    </main>
 
-                <div class="photographer-card">
-                    <img src="/img/人1右.JPG" alt="攝影師2" class="photographer-image">
-                    <div class="photographer-info">
-                        <h3 class="photographer-name">攝影師2</h3>
-                        <p class="photographer-specialty">時尚攝影</p>
-                        <div class="photographer-rating">
-                            <span>⭐⭐⭐⭐⭐</span> <!-- 評價星級 -->
-                        </div>
-                        <button class="view-portfolio-btn">查看作品集</button>
-                    </div>
-                </div>
+    <!-------------------- JS ------------------------>
 
-                <div class="photographer-card">
-                    <img src="/img/海灘兩人.jpg" alt="攝影師2" class="photographer-image">
-                    <div class="photographer-info">
-                        <h3 class="photographer-name">攝影師2</h3>
-                        <p class="photographer-specialty">時尚攝影</p>
-                        <div class="photographer-rating">
-                            <span>⭐⭐⭐⭐⭐</span> <!-- 評價星級 -->
-                        </div>
-                        <button class="view-portfolio-btn">查看作品集</button>
-                    </div>
-                </div>
-
-                <div class="photographer-card">
-                    <img src="/img/海灘兩人.jpg" alt="攝影師2" class="photographer-image">
-                    <div class="photographer-info">
-                        <h3 class="photographer-name">攝影師2</h3>
-                        <p class="photographer-specialty">時尚攝影</p>
-                        <div class="photographer-rating">
-                            <span>⭐⭐⭐⭐⭐</span> <!-- 評價星級 -->
-                        </div>
-                        <button class="view-portfolio-btn">查看作品集</button>
-                    </div>
-                </div>
-            </section>
-        </main>
-    </section>
-
-    <!-- 引入 Bootstrap JS (放在 body 結束前) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- 1. 顯示相簿封面
+        2. 點開時展開相冊
+        3. 彈出新的小視窗(不是新分頁)
+        4. 分頁內排滿相片
+        3. 點網頁其他地方或右上角X，相冊被收起 -->
+    <script>
+        // 相簿對應的圖片組
+        const albumImages = {
+            1: ["/img/Lemon.jpg", "/img/book&camera.jpg", "/img/redhouse.jpg", "/img/girl.jpg"],
+            2: ["/img/Lemon.jpg", "/img/book&camera.jpg", "/img/Lemon.jpg", "/img/tower2.jpeg"],
+            3: ["/img/redhouse.jpg", "/img/book&camera.jpg", "/img/redhouse.jpg", "/img/goldenhair.jpg"]
+        };
+
+        // 選取關鍵元素
+        const bookCovers = document.querySelectorAll(".book-cover");
+        const modal = document.getElementById("modal");
+        const modalGallery = document.getElementById("modalGallery");
+        const closeBar = document.getElementById("closebar");
+
+        // 為每個相簿添加點擊事件
+        bookCovers.forEach((cover) => {
+            cover.addEventListener("click", function () {
+                const albumId = this.getAttribute("data-album"); // 獲取相簿 ID
+                const images = albumImages[albumId]; // 根據 ID 獲取圖片組
+
+                // 清空彈出框內容
+                modalGallery.innerHTML = "";
+
+                // 動態添加圖片到彈出框
+                images.forEach((imageSrc) => {
+                    const imgElement = document.createElement("img");
+                    imgElement.src = imageSrc;
+                    imgElement.alt = "相片";
+                    modalGallery.appendChild(imgElement);
+                });
+
+                // 顯示彈出框
+                modal.style.display = "flex";
+            });
+        });
+
+        // 關閉彈出框
+        closeBar.addEventListener("click", function () {
+            modal.style.display = "none";
+        });
+
+        // 點擊彈出框外部關閉
+        window.addEventListener("click", function (event) {
+            if (event.target === modal) {
+                modal.style.display = "none";
+            }
+        });
+    </script>
 </body>
 
 </html>
